internal/octogo/testdata/assign_op.ogo
// A compound assignment "x op= y" is equivalent to "x = x op y", except that the
// target is evaluated only once. The eleven operators mirror the binary ones:
// "+=", "-=", "*=", "/=", "%=", "&=", "|=", "^=", "&^=", "<<=" and ">>=".

func arithmetic() {
	x := 10
	x += 5
	x -= 3
	x *= 2
	x /= 4
	x %= 4
	println(x)
}

func bitwise() {
	y := 12
	y &= 10
	y |= 3
	y ^= 1
	y &^= 2 // AND NOT: clears in y every bit set in the operand
	println(y)
}

// A shift count is independent of the target's type, so it is not checked for
// assignability to it the way the other operands are.
func shifts() {
	z := 1
	z <<= 4
	z >>= 2
	println(z)
}

type point struct {
	x int
}

type buf struct {
	arr [3]int
	pts []point
	n   int
}

// Every assignable target accepts a compound assignment, not just a bare name.
func targets() {
	var b buf
	b.pts = make([]point, 2, 2)
	b.n += 7
	b.arr[1] += 3
	b.pts[0].x += 9
	b.pts[0].x &^= 1
	println(b.n + b.arr[1] + b.pts[0].x)
}

// The target is read as well as written, so -- unlike a bare "x = e" -- a compound
// assignment counts as a use and a variable so assigned is not "declared and not
// used".
func counts_as_use() {
	a := 1
	a += 1
}

// The operand must be assignable to the target, as for a plain assignment.
func operand_type() {
	x := 1
	s := "a"
	// ERROR "cannot use s of type string as type int in assignment"
	x += s
	println(x)
}

const limit = 10

func not_assignable() {
	// ERROR "cannot assign to limit"
	limit += 1

	// ERROR "undefined: nosuch"
	nosuch += 1

	// ERROR "cannot use _ as value or type"
	_ += 1
}
